--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -22,7 +22,7 @@
 @import '~bootstrap/scss/nav';
 @import '~bootstrap/scss/navbar';
 @import '~bootstrap/scss/card';
-@import "~bootstrap/scss/accordion";
+@import '~bootstrap/scss/accordion';
 @import '~bootstrap/scss/breadcrumb';
 // @import "~bootstrap/scss/pagination";
 @import '~bootstrap/scss/badge';
@@ -53,8 +53,30 @@
 @import 'font';
 @import '~fork-awesome/scss/fork-awesome.scss';
 
-
 // Style overrides happens after dependencies imports
+
+:root,
+[data-bs-theme='light'] {
+  @each $color, $value in $light-text-colors {
+    --#{$prefix}#{$color}-text-rgb: #{to-rgb($value)};
+  }
+  @each $color, $value in $theme-colors {
+    .btn-outline-#{$color} {
+      --bs-btn-color: $dark;
+    }
+  }
+}
+
+[data-bs-theme='dark'] {
+  @each $color, $value in $dark-text-colors {
+    --#{$prefix}#{$color}-text-rgb: #{to-rgb($value)};
+  }
+  @each $color, $value in $theme-colors {
+    .btn-outline-#{$color} {
+      --bs-btn-color: $light;
+    }
+  }
+}
 
 html {
   min-height: 100vh;
